Fixed package docs style

--- a/assets/docs-theme/assets/customizations.css
+++ b/assets/docs-theme/assets/customizations.css
@@ -100,7 +100,10 @@ input.gsc-input {
   font-size: 3.45em;
   margin: 1em auto 1em auto;
   text-align: center;
+  word-break: break-all;
 }
+
+4910e964-21f0-499b
 
 #jd-content h2 {
   font-size: 2.45em;
